# houdini-comfyui-bridge

./: .gitignore  FUNDING.yml  README.md  __init__.py  otl-deploy-rules  pyproject.toml
.github/workflows/: build-pipeline.yml  build.yml  publish.yml  publish_node.yml  release.yml
docs/: First_steps_1.md  First_steps_2.md  First_steps_3.md  Installation_1_Houdini_and_ComfyUI.md  Installation_2_Plugin.md
houdini/: PARMmenu.xml
houdini/otls/: Recipes.hda  cop_xxx.autodepth.1.0.hda  cop_xxx.comfyui_batch_upload_control.1.0.hda  cop_xxx.comfyui_compound_graph_submit.1.0.hda  cop_xxx.comfyui_compound_graph_submit.1.2.hda  cop_xxx.comfyui_compound_graph_submit.1.3.hda  cop_xxx.comfyui_compound_graph_submit_mask.1.2.hda  cop_xxx.comfyui_compute_in_order.1.0.hda  cop_xxx.comfyui_demo_prompt_gen.1.0.hda  cop_xxx.comfyui_diffusion_rendering_FLUX.1.0.hda  cop_xxx.comfyui_diffusion_rendering_FLUX.1.1.hda  cop_xxx.comfyui_diffusion_rendering_SDXL.1.0.hda  cop_xxx.comfyui_diffusion_rendering_SDXL.1.1.hda  cop_xxx.comfyui_diffusion_rendering_SDXL.1.2.hda  cop_xxx.comfyui_diffusion_rendering_SDXL.1.3.hda  cop_xxx.comfyui_diffusion_rendering_SDXL_inpainting.1.0.hda  cop_xxx.comfyui_generate_image_SDXL.1.0.hda  cop_xxx.comfyui_generate_image_SDXL.1.1.hda  cop_xxx.comfyui_generate_image_SDXL.1.2.hda  cop_xxx.comfyui_generate_image_SDXL.1.3.hda  cop_xxx.comfyui_graph_submit.1.0.hda  cop_xxx.comfyui_graph_submit.1.1.hda  cop_xxx.comfyui_graph_submit.1.2.hda  cop_xxx.comfyui_image_upload.1.1.hda  cop_xxx.generate_image.1.0.hda  (+11 more)
houdini_otls_unpacked/: collapse.sh
tools/: prune_hdas.py
(+76 files in other folders)
